Minor CSS fix on main page to correctly wrap text.

--- a/time_system/clocker/static/css/main_page.css
+++ b/time_system/clocker/static/css/main_page.css
@@ -259,6 +259,11 @@ td {
     padding-right: 5px;
 }
 
+pre {
+    white-space: pre-wrap;
+    word-break: keep-all;
+}
+
 #signed-label{
     margin-top: -1em;
 }
